--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,42 @@ body {
   height: 100vh;
   justify-content: center;
   align-items: center;
+  margin: 0;
+}
+
+img {
+  height: 500px;
+  min-width: 500px;
+  max-width: 500px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.carousel {
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  height: 530px;
+  width: 500px;
+  overflow: hidden;
+}
+
+.container-images {
+  display: flex;
+  transform: translateX(0);
+  transition: transform 1s ease;
+}
+.container-buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.btn {
+  background-color: rebeccapurple;
+  color: #fff;
+  border: none;
+  padding: 0.5rem;
+  cursor: pointer;
+  width: 49.5%;
+}
+.btn:hover {
+  opacity: 0.9;
 }/*# sourceMappingURL=style.css.map */
